<?xml version="1.0"?>
<package format="2">
    <name>hafidh_controller</name>
    <version>0.1.0</version>
    <description>Hafidh's first controllers yay so exciting YEET!</description>
    <maintainer email="hafidhsatyanto@gmail.com">Hafidh</maintainer>
    <license>Apache 2.0</license>

    <author>Hafidh Satyanto</author>

    <buildtool_depend>catkin</buildtool_depend>

    <buildtool_depend>message_generation</build_depend>

    <build_export_depend>message_runtime</build_export_depend>

    <depend>controller_interface</depend>
    <depend>franka_hw</depend>
    <depend>geometry_msgs</depend>
    <depend>hardware_interface</depend>
    <depend>libfranka</depend>
    <depend>pluginlib</depend>
    <depend>realtime_tools</depend>
    <depend>roscpp</depend>

    <exec_depend>franka_control</exec_depend>
    <exec_depend>franka_description</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>panda_moveit_config</exec_depend>
    <exec_depend>rospy</exec_depend>

    <export>
        <controller_interface plugin="${prefix}/hafidh_controller_plugin.xml"/>
    </export>
</package>
    